creditLine validation based on cash value and monthlyRevenue done
